Fixed introduction pic scaling on mobile

--- a/src/pages/FrontPage.css
+++ b/src/pages/FrontPage.css
@@ -114,4 +114,9 @@ html, body, #root {
   .introduction-text {
     width: 100%;
   }
+
+  .introduction-pic {
+    max-width: 50vw;
+    max-height: 50vw;
+  }
 }
